--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,5 +1,6 @@
 FROM golang:1.18
 
+ENV GO111MODULE=on
 ENV PORT 5000
 ARG UID=1000
 ARG GID=1000
@@ -17,5 +18,4 @@ RUN go build -o /food
 
 EXPOSE $PORT
 
-# CMD [ "/food", "serve" ]
-ENTRYPOINT [ "bash", "./devops/entrypoint.sh", "/food", "serve", "docker-config-template.yml" ]
+ENTRYPOINT [ "bash", "./devops/entrypointProd.sh", "/food", "serve", "docker-config-template.yml" ]
