--- a/devops/docker-compose.dev.yml
+++ b/devops/docker-compose.dev.yml
@@ -15,6 +15,7 @@ services:
     networks:
       - foodnt
     environment:
+      - CONTAINER=1
       - MYSQL_HOST=database
       - MYSQL_PORT=3306
       - MYSQL_USER=food
