--- a/devops/docker-compose.prod.yml
+++ b/devops/docker-compose.prod.yml
@@ -12,6 +12,7 @@ services:
     networks:
       - foodnt
     environment:
+      - CONTAINER=1
       - MYSQL_HOST=database
       - MYSQL_PORT=3306
       - MYSQL_USER=food
