--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -22,9 +22,9 @@ ENV PORT 5000
 
 WORKDIR /app
 
-COPY --from=builder /app/food /app
-COPY --from=builder /app/devops/entrypointProd.sh /app
-COPY --from=builder /app/docker-config-template.yml /app
+COPY --from=builder /app/food \
+                    /app/devops/entrypointProd.sh \
+                    /app/docker-config-template.yml /app/
 
 EXPOSE $PORT
 
