--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -9,10 +9,13 @@ RUN groupadd -r --gid $GID user && useradd -r --uid $UID -g user user
 
 WORKDIR /app
 
-ADD . /app
+COPY go.??? ./
 
-RUN go mod tidy
-RUN go mod verify
+# RUN go mod tidy
+# RUN go mod verify
+RUN go mod download
+
+ADD . ./
 
 # install air for hot-reload
 # RUN go get -u github.com/cosmtrek/air
